--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
-    "traillingComma":"es5",
-    "tabWidth":2,
-    "semi":false,
-    "singleQuote":true
-}
+    "trailingComma": "es5",
+    "tabWidth": 2,
+    "semi": false,
+    "singleQuote": true
+  }
